Compiler/tests/bad/array4.nx
type t : array 6 of [minint .. minint];
